# cps-scripts2025

./: README.md  pyproject.toml  test.py  图片保留原信息粘贴.py
src/: test.py  utils.py
src/pdf/: dir2pdf.py  merge_pdf.py  pdf2img.py  script_dir2pdf.py  script_pdf2jpg.py  script_word2jpg.py  utils.py  word2jpg.py  word2pdf.py
src/scripts/: pdf2jpg.py
