[project]
name = "cps-scripts"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "CPS", email = "373704015@qq.com"},
]
dependencies = [
    "pydantic>=2.12.3",
    "pywin32>=311",
    "pymupdf>=1.26.5",
    "img2pdf>=0.6.1",
    "pypdf>=6.1.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPT"}


[tool.pdm]
distribution = false
